#greek_stats_ui.gd
extends Control

@onready var alpha_progress_bar: ProgressBar = %AlphaProgressBar
@onready var beta_progress_bar: ProgressBar = %BetaProgressBar
@onready var gamma_progress_bar: ProgressBar = %GammaProgressBar
@onready var delta_progress_bar: ProgressBar = %DeltaProgressBar
@onready var omega_progress_bar: ProgressBar = %OmegaProgressBar
@onready var sigma_progress_bar: ProgressBar = %SigmaProgressBar
